# RLZ

./: CMakeLists.txt
data/: ecoli_queries_10k_10.txt  ecoli_queries_1k_10.txt  eliminate_lines  eliminate_lines.cpp  yeast_queries_10k_10.txt  yeast_queries_10k_20.txt  yeast_queries_10k_40.txt  yeast_queries_10k_80.txt
include/: BitsUtils.h  BlockHeaders.h  BlockHeadersFactory.h  BlockHeadersRelz.h  BytesReader.h  CoderBlocks.h  CoderBlocksRelz.h  CompactedText.h  ComparatorUtils.h  Compressor.h  CompressorSingleBuffer.h  DecoderBlocks.h  DecoderBlocksRelz.h  DecoderBlocksRelzBytes.h  FactorsConfig.h  FactorsConfig.h~  FactorsFastIteratorComparator.h  FactorsIterator.h  FactorsIterator.h~  FactorsIteratorCompacted.h  HashTrie.h  KarpRabin.h  KarpRabinFactorsSuffixes.h  LengthsCoderBlocks.h  LengthsCoderBlocksBytes.h  Metadata.h  PositionsCoderBlocks.h  PositionsCoderBlocksBytes.h  ReferenceIndex.h  ReferenceIndexBasic.h  ReferenceIndexRR.h  RelzIndex.h  RelzIndex.h~  RelzIndexHash.h  RelzIndexReference.h  TextFilter.h  TextFilterBasic.h  TextFilterFull.h
programs/: build_reference.cpp  build_relz_basic.cpp  build_relz_hash.cpp  build_relz_hash_uncompacted.cpp  build_relz_reference.cpp  build_relz_reference_simple.cpp  clean_text.cpp  compress.cpp  compress_factors.cpp  decompress.cpp  generate_queries.cpp  relz_search_basic.cpp  relz_search_hash.cpp  relz_search_hash_simple.cpp  relz_search_hash_uncompacted.cpp  relz_search_reference.cpp  relz_search_reference_simple.cpp  test_compacted_text.cpp  test_karp_rabin.cpp  test_sdsl.cpp  test_search.cpp
src/: BitsUtils.cpp  BlockHeaders.cpp  BlockHeadersFactory.cpp  BlockHeadersRelz.cpp  BytesReader.cpp  CoderBlocks.cpp  CoderBlocksRelz.cpp  CompactedText.cpp  Compressor.cpp  CompressorSingleBuffer.cpp  DecoderBlocks.cpp  DecoderBlocksRelz.cpp  DecoderBlocksRelzBytes.cpp  FactorsFastIteratorComparator.cpp  FactorsIterator.cpp  FactorsIterator.cpp~  FactorsIteratorCompacted.cpp  HashTrie.cpp  KarpRabin.cpp  KarpRabinFactorsSuffixes.cpp  LengthsCoderBlocks.cpp  LengthsCoderBlocksBytes.cpp  Metadata.cpp  PositionsCoderBlocks.cpp  PositionsCoderBlocksBytes.cpp  ReferenceIndex.cpp  ReferenceIndexBasic.cpp  (+11 more)
